--- a/models/bm25/test_bm25.ipynb
+++ b/models/bm25/test_bm25.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from underthesea import word_tokenize\n",
+    "from underthesea import word_tokenize, text_normalize\n",
     "from bm25 import BM25Okapi\n",
     "import numpy as np\n",
     "import ast"
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "def remove_punctuation_vietnamese(text):\n",
     "    # Define Vietnamese punctuation characters\n",
-    "    vietnamese_punctuation = \"\"\"!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\"\"\"\n",
-    "\n",
+    "    # vietnamese_punctuation = \"\"\"!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\"\"\"\n",
+    "    vietnamese_punctuation = r'[!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~]'\n",
     "    # Create a translation table\n",
-    "    translator = str.maketrans('', '', vietnamese_punctuation)\n",
+    "    # translator = str.maketrans('', '', vietnamese_punctuation)\n",
     "\n",
     "    # Remove punctuation using the translation table and regex\n",
     "    cleaned_text = re.sub(f\"[{re.escape(vietnamese_punctuation)}]\", '', text)\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,43 +96,62 @@
     "    text = \" \".join(text.split())\n",
     "    text = text.lower()\n",
     "\n",
-    "    return text"
+    "    return text\n",
+    "\n",
+    "def remove_special_characters(text):\n",
+    "    text = remove_punctuation_vietnamese(text)\n",
+    "    # Define a regular expression pattern for special characters\n",
+    "    pattern = re.compile(r'[^\\w\\s]', flags=re.UNICODE)\n",
+    "    \n",
+    "    # Use the pattern to replace special characters with an empty string\n",
+    "    try:\n",
+    "        cleaned_text = re.sub(pattern, ' ', text)\n",
+    "    except:\n",
+    "        print(text)\n",
+    "    cleaned_text = cleaned_text.strip()\n",
+    "    cleaned_text = cleaned_text.replace(\"...\", \"\")\n",
+    "    cleaned_text = text_normalize(cleaned_text)\n",
+    "    text = re.sub(r'\\.',' . ',cleaned_text)\n",
+    "    text = re.sub(r'\\,', \"\", text)\n",
+    "    text = re.sub(r'\\--', \"\", text)\n",
+    "    text = text.strip()\n",
+    "    return \" \".join(text.lower().split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testdataset_df = pd.read_csv(\"testdataset.csv\")\n",
-    "test = pd.read_csv(\"test 1.csv\")"
+    "testdataset_df = pd.read_csv(r\"data\\testdataset.csv\")\n",
+    "test = pd.read_csv(r\"data\\test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bm25 import BM25Okapi\n",
     "a = test['description'] + \" \" + test['name']\n",
-    "corpus = a.dropna().apply(preprocess).apply(remove_punctuation_vietnamese).apply(word_tokenize).tolist()\n",
+    "corpus = a.dropna().apply(preprocess).apply(remove_special_characters).apply(word_tokenize).tolist()\n",
     "model = BM25Okapi(corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_testdataset = testdataset_df['question'].dropna().apply(preprocess).apply(remove_punctuation_vietnamese).apply(word_tokenize)"
+    "tokenized_testdataset = testdataset_df['question'].dropna().apply(preprocess).apply(remove_special_characters).apply(word_tokenize)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "0.0.0"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
